Changed the theme

--- a/Vidly/Views/Customers/New.cshtml
+++ b/Vidly/Views/Customers/New.cshtml
@@ -15,6 +15,7 @@
 
     <div class="form-group">
         @Html.LabelFor(m => m.Birthdate)
+        <labelDate of BirthDate></labelDate>
         @Html.TextBoxFor(m => m.Birthdate, new { @class = "form-control" })
     </div>
 
