loading hierarchical data

--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -55,7 +55,7 @@ else
                         }
                     },
                     {
-                        data:"name"
+                        data:"membershipType.name"
                     }
                     ,
                     {
